prow;er.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prowler
