prowler.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prowler
